fix: fix media safari stretching

--- a/src/core/media/_media.less
+++ b/src/core/media/_media.less
@@ -9,7 +9,6 @@
 }
 
 .media-inner {
-  display: flex;
   position: absolute;
   top: 0;
   left: 0;
